--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <h1>Buenas noches manada</h1>
 
 <script>
-  while(true){
+  const i = 0;
+  while(i<0){
     console.log("hola banda");
+    i++;
   }
 </script>
 
