--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
+<!DOCTYPE html>
+<html>
 <body>
-  
-<h1>Buenas noches manada</h1>
-
+<h2>Petrolero puto</h2>
 <script>
-  const i = 0;
-  while(i<0){
-    console.log("hola banda");
-    i++;
-  }
+let i = 0;
+while (i < 1){
+console.log("hola"):
+}
 </script>
-
 </body>
+</html>
